// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<HubCard /> should render correctly 1`] = `
<IntlProvider
  defaultFormats={Object {}}
  defaultLocale="en"
  formats={Object {}}
  locale="en"
  messages={Object {}}
  onError={[Function]}
  textComponent={Symbol(react.fragment)}
>
  <Provider
    store={
      Object {
        "clearActions": [Function],
        "dispatch": [Function],
        "getActions": [Function],
        "getState": [Function],
        "replaceReducer": [Function],
        "subscribe": [Function],
      }
    }
  >
    <MemoryRouter
      initialEntries={
        Array [
          "/ansible-dashboard",
        ]
      }
    >
      <IntlProvider
        defaultFormats={Object {}}
        defaultLocale="en"
        formats={Object {}}
        locale="en"
        messages={Object {}}
        onError={[Function]}
        textComponent={Symbol(react.fragment)}
      >
        <HubCard />
      </IntlProvider>
    </MemoryRouter>
  </Provider>
</IntlProvider>
`;

exports[`<HubCard /> should render correctly in loading state 1`] = `
<IntlProvider
  defaultFormats={Object {}}
  defaultLocale="en"
  formats={Object {}}
  locale="en"
  messages={Object {}}
  onError={[Function]}
  textComponent={Symbol(react.fragment)}
>
  <Provider
    store={
      Object {
        "clearActions": [Function],
        "dispatch": [Function],
        "getActions": [Function],
        "getState": [Function],
        "replaceReducer": [Function],
        "subscribe": [Function],
      }
    }
  >
    <MemoryRouter
      initialEntries={
        Array [
          "/ansible-dashboard",
        ]
      }
    >
      <IntlProvider
        defaultFormats={Object {}}
        defaultLocale="en"
        formats={Object {}}
        locale="en"
        messages={Object {}}
        onError={[Function]}
        textComponent={Symbol(react.fragment)}
      >
        <HubCard
          isLoading={true}
        />
      </IntlProvider>
    </MemoryRouter>
  </Provider>
</IntlProvider>
`;
